[project]
name = "axcontrol"
description = "AxControl is a Windows 10/11 UI Automation tool developed by aubex Gmbh, Hockenheim."
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    { name = "Marius Räsener", email = "marius.raesener@aubex.de" },
]
dependencies = ["uiautomation", "pynput", "pyperclip", "pywin32"]

[project.optional-dependencies]
dev = ["axcontrol"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
